// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-23 gWjkIU"
  >
    <div
      class="Ellipsis-sc-1dn9bou-0 gzqRPC"
    >
      Completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiStatusbar displays statusBarMessage if no rows 2`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1dtvgs1-23 gWjkIU"
  >
    <div
      class="styled__StyledRightPartial-sc-1dtvgs1-33 kITufN"
    >
      <div
        class="styled__StyledWidthSliderContainer-sc-1dtvgs1-35 hsuISq"
      >
        Max column width:
        <input
          class="styled__StyledWidthSlider-sc-1dtvgs1-36 cgzxFB"
          max="3"
          min="3"
          type="range"
          value="70"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView displays bodyMessage if no rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-1 kyHRpW"
  >
    <div
      class="styled__StyledBodyMessage-sc-1dtvgs1-27 hpwxul"
    >
      (no changes, no records)
    </div>
  </div>
</div>
`;

exports[`AsciiViews AsciiView does not display bodyMessage if rows 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1dtvgs1-1 kyHRpW"
  >
    <pre>
      ╒═══╕
│"x"│
╞═══╡
│"y"│
└───┘
    </pre>
  </div>
</div>
`;
